--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "axios": "^0.21.1",
     "bootstrap": "4.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
     "react-scripts": "3.0.1",
-    "redux": "4.0.5"
+    "redux": "4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-form": "^8.3.7"
   },
   "scripts": {
     "start": "react-scripts start",
