--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/system": "^4.11.3",
     "axios": "^0.21.1",
     "bootstrap": "4.3.1",
     "react": "^17.0.1",
