--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/system": "^4.11.3",
     "axios": "^0.21.1",
     "bootstrap": "4.3.1",
+    "json-server": "^0.16.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
@@ -19,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "json-server": "json-server --port 3001 --watch db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
