--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/system": "^4.11.3",
     "axios": "^0.21.1",
